# bibtex-analyser-llm

./: .env.example  .gitignore  CLAUDE.md  Makefile  Procfile  README.md  app.json  bibtex-gpt.py  deploy-heroku.sh  export_wordcloud2.py  generate_tags_pages.py  interactive_wordcloud.py  link_staff_affiliates.py  plot_wordcloud.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tagged_abstracts.csv  test_wordcloud.py  themes.yaml  venv.sh  wordcloud_test.py
bibtex_analyzer/: __init__.py  __main__.py  bibtex_processor.py  dashboard.py  semantic_search.py  staff_analyzer.py  tag_generator.py
bibtex_analyzer/utils/: __init__.py  file_io.py  text_processing.py
bibtex_analyzer/visualization/: __init__.py  interactive_plot.py  wordcloud2.py  wordcloud_mpl.py  wordcloud_plotly.py
docs/: data_quality_guide.md  hierarchical_themes_guide.md  research_topic_search_and_score_strategy.md  theme_scoring_methodology.md
examples/: basic_usage.py  interactive_demo.ipynb  sample_references.bib
scripts/: analyze_hierarchical_themes.py  calculate_baselines.py  enrich_with_openalex.py  filter_by_staff.py  run_theme_search.py
tests/: __init__.py  conftest.py  test_bibtex_processor.py  test_cli.py  test_deduplication.py  test_semantic_search.py  test_staff_analyzer.py  test_tag_generator.py  test_text_processing.py  test_visualization.py
theme_analysis/: __init__.py  baselines.py  pipeline.py  scoring.py  themes.yaml
theme_analysis/docs/: QUICK_START.md  README_THEME_ANALYSIS.md  RUN_PIPELINE.md  THEME_ANALYSIS_SUMMARY.md
uploads/: sample_references.bib
